data/derived/comb/progs/unify/prog0358.ml.out
Characters 42-43:
  let _ = eval (Cosine(Average(VarX,VarY)), 0, 0);;
                                            ^
Error: This expression has type int but an expression was expected of type
         float
